nullaway_error_524CF8BE-63A7-4642-9FDA-BE7E16C5529B.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/annotation/BeanAnnotationHelper.java:54: error: [NullAway] dereferenced expression names is @Nullable
				if (names.length > 0) {
				         ^
    (see http://t.uber.com/nullaway )
